Discovered fatal issue with the global variables Use of global variables meant that every user had access to the same game states, therefore users had conflicting game states. changed that to let game state list be game state dict with each key being a specific user id

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.7"
+  },
+  "dependencies": {
+    "x_o-game": "file:"
   }
 }
